Aded opens in changefeed